--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_easyloading: ^3.0.5
   connectivity: ^3.0.3
   advstory: ^0.2.1
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
